--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   http: ^1.2.2
   get: ^4.6.6
   fluttertoast: ^8.2.8
+  shared_preferences: ^2.3.3
+  font_awesome_flutter: ^10.8.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
