--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   fluttertoast: ^8.2.8
   shared_preferences: ^2.3.3
   font_awesome_flutter: ^10.8.0
+  img_picker: ^1.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
